--- a/playbooks/roles/moloch/templates/moloch-compose.yml.j2
+++ b/playbooks/roles/moloch/templates/moloch-compose.yml.j2
@@ -13,8 +13,8 @@ services:
     ports:
         - "{{ moloch_port }}:{{ moloch_port }}"
     command: >
-      /bin/bash -c "{{ moloch_data_dir }}db/db.pl {{ moloch_elastic_url }} init \
-      && {{ moloch_data_dir }}bin/moloch_add_user.sh {{ moloch_login }} "Admin User" {{ moloch_pass }} --admin \
+      /bin/bash -c "{{ moloch_data_dir }}/db/db.pl {{ moloch_elastic_url }} init \
+      && {{ moloch_data_dir }}/bin/moloch_add_user.sh {{ moloch_login }} "Admin User" {{ moloch_pass }} --admin \
       && {{ moloch_data_dir }}/bin/node {{ moloch_data_dir }}/viewer/viewer.js -c {{ moloch_data_dir }}/etc/config.ini >> {{ moloch_logs_dir }}/capture.log 2>&1"
     networks:
       - rocknsm_inside
